# hyprland-virtual-desktops

./: Makefile  README.md
docs/superpowers/plans/: 2026-05-12-monitor-profile-collapser.md
docs/superpowers/specs/: 2026-05-12-monitor-profile-collapser-design.md
include/: VirtualDesk.hpp  pinned_windows.hpp  utils.hpp
src/: VirtualDesk.cpp  VirtualDeskManager.cpp  main.cpp  pinned_windows.cpp  utils.cpp
tools/vdesk-collapser/: README.md  pyproject.toml  pyrightconfig.json
tools/vdesk-collapser/tests/: conftest.py  test_cli.py  test_config.py  test_debounce.py  test_driver.py  test_models.py  test_rules.py  test_snapshot.py  test_transition.py
tools/vdesk-collapser/vdesk_collapser/: __main__.py  cli.py  config.py  daemon.py  debounce.py  driver.py  models.py  rules.py  snapshot.py  transition.py
